--- a/src/addsell.html
+++ b/src/addsell.html
@@ -91,12 +91,8 @@
         <div class="main-content">
             <form id="add-sell-form">
                 <div class="form-group">
-                    <label for="sell-code">Sell Code:</label>
-                    <input type="text" id="sell-code" name="sell-code" required>
-                </div>
-                <div class="form-group">
-                    <label for="Product-id">Product Id:</label>
-                    <input type="text" id="Product-id" name="Product-id" required>
+                    <label for="Product-id">Product Code:</label>
+                    <input type="text" id="Product-id" name="Product_id" required>
                 </div>
                 <div class="form-group">
                     <label for="Quantity">Quantity:</label>
@@ -118,5 +114,6 @@
     </div>
 </div>
 <script src="javascript/addsell.js"></script> 
+<script src="Fetch/sellfetch.js"></script>
 </body>
 </html>
