added sell updated

--- a/src/viewsell.html
+++ b/src/viewsell.html
@@ -105,6 +105,8 @@
                         <tr>
                             <th> Sell code </th>
                             <th> Product id</th>
+                            <th> Price</th>
+                            <th> Quantity</th>
                             <th> Date</th>
                             <th> Action </th>
                         </tr>
@@ -114,11 +116,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
+                        <td></td>                        
                         <td></td>
                         <td></td>
                       </tr>
@@ -126,14 +124,27 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>                        
+                        <td></td>
                         <td></td>
                       </tr>
+                      <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>                        
+                        <td></td>
+                        <td></td>
+                      </tr>
+
                     </tbody>
                 </table>
             </section>
