--- a/src/addsell.html
+++ b/src/addsell.html
@@ -89,23 +89,23 @@
     <section class="add-sell">
         <h2>Add Sell</h2>
         <div class="main-content">
-            <form id="add-sell-form">
+            <form class ="add-sell-form" id="form">
                 <div class="form-group">
                     <label for="Product-id">Product Code:</label>
-                    <input type="text" id="Product-id" name="Product_id" required>
+                    <input type="text" id="Product-id" name="product" required>
                 </div>
                 <div class="form-group">
                     <label for="Quantity">Quantity:</label>
-                    <input type="text" id="Quantity" name="Quantity" required>
+                    <input type="text" id="Quantity" name="quantity" required>
                 </div>
                <div class="form-group">
                     <label for="Price">Price:</label>
-                    <input type="text" id="Price" name="Price" required>
+                    <input type="text" id="Price" name="total_price" required>
                 </div>
-                <div class="form-group">
+<!--                 <div class="form-group">
                     <label for="Date">Date:</label>
                     <input type="text" id="Date" name="Date" required>
-                </div> 
+                </div> --> 
                 <button type="submit">Save</button>
             </form>
         </div>
