Update productfetch2.js and add sellget.js

--- a/src/viewsell.html
+++ b/src/viewsell.html
@@ -100,7 +100,7 @@
                     <i class="bi bi-search"></i> </p>
                 </div>
                 
-                <table>
+                <table id="saleTable">
                     <thead>
                         <tr>
                             <th> Sell code </th>
@@ -108,49 +108,15 @@
                             <th> Price</th>
                             <th> Quantity</th>
                             <th> Date</th>
-                            <th> Action </th>
                         </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>                        
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>                        
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>                        
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>                        
-                        <td></td>
-                        <td></td>
-                      </tr>
-
                     </tbody>
                 </table>
             </section>
         </main>
     </div>
 </div>
-<script src="javascript/viewsell.js"></script> 
+<script src="../src/Fetch/sellget.js"></script> 
 </body>
 </html>
