--- a/src/viewsell.html
+++ b/src/viewsell.html
@@ -99,7 +99,20 @@
                     <p class="search-p">Search: <input type="text" id="search-bar" name="search-bar" placeholder="Search" >
                     <i class="bi bi-search"></i> </p>
                 </div>
-                
+                <table id="sellTable">
+                  <thead>
+                    <tr>
+                        <th> Sell code </th>
+                        <th> Product id</th>
+                        <th> Price</th>
+                        <th> Quantity</th>
+                        <th> Date</th>
+                        <!-- <th class="action"> Action </th> -->
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                </table>
+               <!--  
                 <table>
                     <thead>
                         <tr>
@@ -146,11 +159,12 @@
                       </tr>
 
                     </tbody>
-                </table>
+                </table> -->
             </section>
         </main>
     </div>
 </div>
 <script src="javascript/viewsell.js"></script> 
+<script src="Fetch/sellget.js"></script>
 </body>
 </html>
