--- a/src/viewsell.html
+++ b/src/viewsell.html
@@ -104,7 +104,7 @@
                     <thead>
                         <tr>
                             <th> Sell code </th>
-                            <th> Product id</th>
+                            <th> Product</th>
                             <th> Price</th>
                             <th> Quantity</th>
                             <th> Date</th>
