--- a/src/addsupplier.html
+++ b/src/addsupplier.html
@@ -6,6 +6,7 @@
     <title>Add Supplier</title>
     <link rel="stylesheet" href="CSS/addsupplier.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="CSS/buttton.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -17,7 +18,7 @@
           <li><a href="addproduct.html">Inventory</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
-         <li><a href="#" class="link-btn">Logout</a></li>
+         <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
     </header>
 
     <div class="page">
@@ -98,7 +99,7 @@
                     <label for="Quantity">Conatct:</label>
                     <input type="text" id="Quantity" name="contact_info" required>
                 </div>
-                <button type="submit">Save</button>
+                <button type="submit" class="save-buttton">Save</button>
             </form>
         </div>
     </section>
@@ -107,5 +108,6 @@
 </div>
 <script src="javascript/addsupplier.js"></script> 
 <script src="Fetch/supplier.js"> </script>
+<script src="Fetch/logout.js"></script>
 </body>
 </html>
