--- a/src/property.html
+++ b/src/property.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Supplier</title>
-    <link rel="stylesheet" href="CSS/viewsupplier.css">
+    <title>Add Supplier</title>
+    <link rel="stylesheet" href="CSS/addsupplier.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
 
     <header class="head__link" tabindex="0">
-      <h2 class="Stock-Minder">Stock Minder</h2>
+      <h2>Stock Minder</h2>
         <ul class="all-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#">Inventory</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="landing.html">Home</a></li>
+          <li><a href="addproduct.html">Inventory</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
          <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
     </header>
@@ -39,7 +38,7 @@
                   <i class="bx bxs-down-arrow"></i>
                 </div>
                 <ul class="submenu">
-                  <li><a href="#0" class="submenu-link1">Add Purchase</a></li>
+                  <li><a href="#" class="submenu-link1">Add Purchase</a></li>
                   <li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
                 </ul>
               </li>
@@ -85,64 +84,29 @@
         </div>
     </div>
     <div class="main-content-side">
-        <main>
-            <section class="View-Sell">
-                <div class="View-Sell-button">
-                  <h2 class="viewsell-h">View Supplier</h2> 
-                
-                 <a class="addsell-button" href="addsupplier.html">
-                     Add Supplier
-                 </a>
+  <main>
+    <section class="dashboard"></section>
+    <section class="add-sell">
+        <h2>Add Property</h2>
+        <div class="main-content">
+            <form class="add-sell-form" id="form">
+                <div class="form-group">
+                    <label for="Product-id">Brand:</label>
+                    <input type="text" id="Product-id" name="brand" required>
                 </div>
-                <div class="icon-search">
-                    <p class="search-p">Search: <input type="text" id="search-bar" name="search-bar" placeholder="Search" >
-                    <i class="bi bi-search"></i> </p>
+                <div class="form-group">
+                    <label for="Quantity">Size:</label>
+                    <input type="text" id="Quantity" name="size" required>
                 </div>
-                
-
-                      <table id="supplierTable">
-                        <thead>
-                          <tr>
-                            <th> Supplier Code </th>
-                            <th>Supplier Name</th>
-                            <th>Contact</th>
-                            <th class="action">Action</th>
-                          </tr>
-                        </thead>
-                        <tbody></tbody>
-                      </table>
-                      <!-- <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                    </tbody>
-                </table> -->
-            </section>
-        </main>
+                <button type="submit" class="save-buttton">Save</button>
+            </form>
+        </div>
+    </section>
+  </main>
     </div>
 </div>
-<script src="javascript/viewsupplier.js"></script> 
-<script src="Fetch/supplierget.js"></script>
+<script src="javascript/addsupplier.js"></script> 
+<script src="Fetch/propertyfetch.js"> </script>
 <script src="Fetch/logout.js"></script>
 </body>
 </html>
