--- a/src/viewproduct.html
+++ b/src/viewproduct.html
@@ -18,7 +18,7 @@
           <li><a href="addproduct.html">Inventory</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
-         <li><a href="#" class="link-btn">Logout</a></li>
+         <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
     </header>
 
     <div class="page">
@@ -173,5 +173,6 @@
 </div>
 <script src="javascript/viewproduct.js"></script> 
 <script src="Fetch/productfetch2.js"></script>
+<script src="Fetch/logout.js"></script>
 </body>
 </html>
