--- a/src/viewpurchase.html
+++ b/src/viewpurchase.html
@@ -18,7 +18,7 @@
           <li><a href="#">Inventory</a></li>
           <li><a href="#">Login</a></li>
         </ul>
-         <li><a href="#" class="link-btn">Logout</a></li>
+         <li><a href="#" class="link-btn"  id="logoutBtn">Logout</a></li>
     </header>
 
     <div class="page">
@@ -119,5 +119,6 @@
     </div>
 </div>
 <script src="../src/Fetch/purchaseget.js"></script> 
+<script src="Fetch/logout.js"></script>
 </body>
 </html>
