--- a/src/property.html
+++ b/src/property.html
@@ -6,6 +6,7 @@
     <title>Add Supplier</title>
     <link rel="stylesheet" href="CSS/addsupplier.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="CSS/buttton.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
