added form to view supplier

--- a/src/viewsupplier.html
+++ b/src/viewsupplier.html
@@ -98,6 +98,14 @@
                     <p class="search-p">Search: <input type="text" id="search-bar" name="search-bar" placeholder="Search" >
                     <i class="bi bi-search"></i> </p>
                 </div>
+
+                <div>
+                  <form action="">
+                    <input type="text" name="" id="name" placeholder="Supplier-name">
+                    <input type="text" name="" id="contact" placeholder="Conatct">
+                    <button type="submit">Update Product</button>
+                  </form>
+                </div>
                 
 
                       <table id="supplierTable">
