--- a/src/viewsupplier.html
+++ b/src/viewsupplier.html
@@ -100,9 +100,10 @@
                 </div>
 
                 <div>
-                  <form action="">
-                    <input type="text" name="" id="name" placeholder="Supplier-name">
-                    <input type="text" name="" id="contact" placeholder="Conatct">
+                  <form action="" id="form">
+                    <input type="text" name="" id="updatecode" placeholder="Supplier-code" style="display: none;">
+                    <input type="text" name="" id="updatename" placeholder="Supplier-name">
+                    <input type="text" name="" id="updatecontact" placeholder="Conatct">
                     <button type="submit">Update Product</button>
                   </form>
                 </div>
