--- a/src/addsell.html
+++ b/src/addsell.html
@@ -40,8 +40,8 @@
                   <i class="bx bxs-down-arrow"></i>
                 </div>
                 <ul class="submenu">
-                  <li><a href="#0" class="submenu-link1">Add Purchase</a></li>
-                  <li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
+                  <!-- <li><a href="#0" class="submenu-link1">Add Purchase</a></li>
+                   --><li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
                 </ul>
               </li>
 
