--- a/src/viewsell.html
+++ b/src/viewsell.html
@@ -39,8 +39,8 @@
                   <i class="bx bxs-down-arrow"></i>
                 </div>
                 <ul class="submenu">
-                  <li><a href="#" class="submenu-link1">Add Purchase</a></li>
-                  <li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
+                  <!-- <li><a href="#" class="submenu-link1">Add Purchase</a></li>
+                   --><li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
                 </ul>
               </li>
 
