--- a/src/viewsupplier.html
+++ b/src/viewsupplier.html
@@ -8,6 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="CSS/design.css">
 </head>
 <body>
 
@@ -39,8 +40,8 @@
                   <i class="bx bxs-down-arrow"></i>
                 </div>
                 <ul class="submenu">
-                  <li><a href="#0" class="submenu-link1">Add Purchase</a></li>
-                  <li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
+                  <!-- <li><a href="#0" class="submenu-link1">Add Purchase</a></li>
+                   --><li><a href="viewpurchase.html" class="submenu-link">View Purchase</a></li>
                 </ul>
               </li>
 
@@ -101,10 +102,12 @@
 
                 <div>
                   <form action="" id="form">
-                    <input type="text" name="" id="updatecode" placeholder="Supplier-code" style="display: none;">
-                    <input type="text" name="" id="updatename" placeholder="Supplier-name">
-                    <input type="text" name="" id="updatecontact" placeholder="Conatct">
-                    <button type="submit">Update Product</button>
+                    <input type="text" name="" id="updatecode" placeholder="Supplier-code" style="display: none;" >
+                    <label for="Product-id">Supplier Name:</label>
+                    <input type="text" name="" id="updatename" placeholder="Supplier-name"  class="supinput">
+                    <label for="updatecontact">Contact:</label>
+                    <input type="text" name="" id="updatecontact" placeholder="Conatct" class="supinput">
+                    <button type="submit" class="btn-1">Update Supplier</button>
                   </form>
                 </div>
                 
