--- a/src/addproduct.html
+++ b/src/addproduct.html
@@ -78,7 +78,7 @@
               </li>
 
               <li class="dropdown"><a href="lowstock.html" class="anchor">LowStock</a></li>
-              <li class="dropdown"><a href="Dashboard.html" class="anchor">Report</a></li>
+              <li class="dropdown"><a href="report.html" class="anchor">Report</a></li>
               <li class="dropdown"><a href="Myaccount.html" class="anchor">My Account</a></li>
             </ul>
           </div>
