added dashboard js

--- a/src/Dashboard.html
+++ b/src/Dashboard.html
@@ -132,23 +132,15 @@
       </div>
 
       
-      <div class="table-card">
+      <div class="table-card" id="sales-table">
           <h3>Latest Sales </h3>
           <table>
              <tr>
                 <th>#</th>
-                <th>product name</th>
-                <th>date</th>
+                <th>product Id</th>
+                <th>date    </th>
                 <th>total sales </th>
-             </tr>
-
-             <tr>
-              <td>1</td>
-              <td>data 1</td>
-              <td>data 2</td>
-              <td>data 3</td>
-             </tr>
-            
+             </tr>            
           </table>
       </div>
 
