Update image paths in login and signup pages

--- a/src/login.html
+++ b/src/login.html
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- <input type="checkbox" id="flip"> -->
     <div class="cover">
-      <img src="images/blackboy.jpg" alt="">
+      <img src="../src/Images/blackboy.jpg" alt="">
       <div class="front"> 
         <div class="text">
           <h2>Welcome to StockMinder</h2>
