added few updates

--- a/frontend/src/addsell.html
+++ b/frontend/src/addsell.html
@@ -19,7 +19,7 @@
           <li><a href="addproduct.html">Inventory</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
-         <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
+         <li><a href="login.html" class="link-btn" id="logoutBtn">Logout</a></li>
     </header>
 
     <div class="page">
