--- a/frontend/src/viewsell.html
+++ b/frontend/src/viewsell.html
@@ -14,11 +14,11 @@
     <header class="head__link" tabindex="0">
       <h2 class="Stock-Minder">Stock Minder</h2>
         <ul class="all-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#">Inventory</a></li>
-          <li><a href="#">Login</a></li>
+          <li><a href="landing.html">Home</a></li>
+          <li><a href="addproduct.html">Inventory</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
-         <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
+         <li><a href="login.html" class="link-btn" id="logoutBtn">Logout</a></li>
     </header>
 
     <div class="page">
