--- a/frontend/src/Dashboard.html
+++ b/frontend/src/Dashboard.html
@@ -18,7 +18,7 @@
             <li><a href="addproduct.html">Inventory</a></li>
             <li><a href="login.html">Login</a></li>
           </ul>
-           <li><a href="#" class="link-btn" id="logoutBtn">Logout</a></li>
+           <li><a href="login.html" class="link-btn" id="logoutBtn">Logout</a></li>
       </header>
   
       <div class="page">
