--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -14,9 +14,9 @@
         <ul class="all-links">
           <li><a href="landing.html">Home</a></li>
           <li><a href="addproduct.html">Inventory</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="#about">About Us</a></li>
           <li><a href="login.html">Login</a></li>
-          <li><a href="#" class="link-btn">Logout</a></li>
+          <li><a href="login.html" class="link-btn">Logout</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +34,7 @@
 
        <div class="ser-btn">
         <a href="#services">Services</a>
-        <a href="#">Sign Up</a>
+        <a href="signup.html">Sign Up</a>
        </div>
 
       </div>
