--- a/frontend/src/Dashboard.html
+++ b/frontend/src/Dashboard.html
@@ -14,7 +14,7 @@
     <header class="head__link" tabindex="0">
         <h2>Stock Minder</h2>
           <ul class="all-links">
-            <li><a href="landing.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="addproduct.html">Inventory</a></li>
             <li><a href="login.html">Login</a></li>
           </ul>
