--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,7 +12,7 @@
       <nav class="navbar">
         <h2 class="logo"><a href="#">Stock Minder</a></h2>
         <ul class="all-links">
-          <li><a href="landing.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="addproduct.html">Inventory</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="login.html">Login</a></li>
