updated image path

--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -10,7 +10,7 @@
   <div class="container">
       <div class="cover">
         <div class="cover__sub">   
-          <img src="../src/Images/blackgirl.jpg" alt="">
+          <img src="../Images/blackgirl.jpg" alt="">
           <div class="front"> 
            <div class="text">
              <h2>Welcome to StockMinder</h2>
